--- a/implementando-js/index.html
+++ b/implementando-js/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css"><!--o reset.css foi a primeira folha de estilo aplicada, é importante que isso ocorra, pois a leitura ocorre de cima pra baixo-->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <style>
     body{
       background-color: rgba(59, 204, 248, 0.137);
@@ -42,5 +42,6 @@
   <p>
     <a href="", target="_blank">Linkedin</a>
   </p>
+  <script src="js/script.js"></script>
 </body>
 </html>
