--- a/ex011/aula.html
+++ b/ex011/aula.html
@@ -17,12 +17,10 @@
   <div class="dados-pessoais">
     <img src="img/foto.jpg" alt="foto André" width="200px">
     <ul id="dados">
-      <li>andrevitorerin@gmail.com</li>
-      <li>(11)9 9441-2403</li>
-      <li>31 anos</li>
-      <li><spam class="cidade">
-        Av. Julio Mesquista, Osasco - SP
-      </spam></li>
+      <li class="personal-data">andrevitorerin@gmail.com</li>
+      <li class="personal-data">(11)9 9441-2403</li>
+      <li class="personal-data">31 anos</li>
+      <li id="cidade" class="personal-data">Av. Julio Mesquista, Osasco - SP</li>
     </ul>
   </div>
   <table>
