--- a/hora-do-dia/index.html
+++ b/hora-do-dia/index.html
@@ -10,7 +10,14 @@
     <header>
       <h1>Hora do Dia</h1>
     </header>
-    <section></section>
+    <section>
+      <div id="divMessage">
+        <span id="message">Aqui vai aparecer a msg</span>
+      </div>
+      <div class="picture">
+        <img id="image" src="img/manha.png" />
+      </div>
+    </section>
     <footer>
       <p>&copy; André Vítor Master</p>
     </footer>
