--- a/spread-rest-destructuring/index.html
+++ b/spread-rest-destructuring/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <p>
-      Exercício de manipulação de vetor usando um arquivo chamado people.js, que
-      foi retirado de uma API. Resultados aparecerão no console.
+      Exercício sobre os operadores spread, rest e destructuring. Resultado no
+      console.
       <script src="js/people.js"></script>
       <script src="js/scripts.js"></script>
     </p>
