--- a/desafio2/index.html
+++ b/desafio2/index.html
@@ -11,10 +11,10 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
 
-    <title>Desafio 02</title>
+    <title>Países Favoritos</title>
   </head>
   <body>
-    <h1>Desafio 02 - em andamento</h1>
+    <h1>Países Favoritos</h1>
 
     <div class="country-container">
       <div class="country-list">
@@ -23,7 +23,7 @@
         <div id="tabCountries"></div>
       </div>
       <div class="country-list">
-        <h5>Países (<span id="countFavorites"></span>)</h5>
+        <h5>Países Favoritos(<span id="countFavorites"></span>)</h5>
         <h6>População total: <span id="totalPopulationFavorites"></span></h6>
         <div id="tabFavorites"></div>
       </div>
